# AnyLaneNET

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: explore_data.ipynb
src/: datagen.py  evaluate.py  export.py  inference.py  train.py
src/anylane/: __init__.py
src/anylane/data/: __init__.py  dataset.py  transforms.py
src/anylane/models/: __init__.py  lane_net.py
src/anylane/utils/: __init__.py  metrics.py  visualization.py
tests/: test_dataset.py  test_metrics.py  test_model.py
